<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="false"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelName" />

        <EditText
            android:id="@+id/fieldName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hintName"
            android:autofillHints="name" />

        <TextView
            android:id="@+id/labelAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelAge" />

        <EditText
            android:id="@+id/fieldAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hintAge"/>

        <TextView
            android:id="@+id/labelAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelAddress" />

        <EditText
            android:id="@+id/fieldAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/hintAddress"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/firstLinearLayout"
        android:background="@drawable/button_save"
        android:text="@string/saveButtonText" />

</RelativeLayout>